# FastAPI-Internship-Project

./: .env.test  .gitignore  .gitlab-ci.yml  alembic.ini  pyproject.toml
app/: main.py
app/api/routers/: articles.py  base.py  comments.py  profile.py  users.py
app/api/services/: articles.py  auth.py  comments.py  profile.py  users.py
app/core/: config.py  middelware.py
app/core/settings/: app_settings.py  base.py  test.py
app/db/: __init__.py  base.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2024_03_28_1241-ebf540e373a1_create_db.py  2024_03_29_1121-74f2295e7e5d_update_db.py  9523fd70a75f_create_database.py
app/db/models/: articles.py  users.py
app/db/schemas/: articles.py  comments.py  profile.py  users.py
app/schemas/: articles.py
tests/: conftest.py  test_articles.py
